Yaml/ingress_alb.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: ingress-apps
  labels:
    app: ingress-app
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  rules:
    - http:
        paths:
          - path: /app1/*
            backend:
              serviceName: user-service-app-nodeport-service
              servicePort: 80
          - path: /app2/*
            backend:
              serviceName: nginx-app-service
              servicePort: 80
          - path: /*
            backend:
              serviceName: nginx-app-service
              servicePort: 80
